Updated with newer Java features and fixed warnings